fix: 당첨 번호가 너무 큰 경우 예외 처리